# marbles

./: .buildinfo  .clang-tidy  .codespellrc  .gitignore  .gitmodules  Building.html  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GettingStarted.html  InputFiles.html  Introduction.html  LBM.html  LICENSE  Linting.html  NOTICE  README.rst  Testing.html  Tutorials.html  VandV.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  cleanup-cache.yml  docs.yml
CMake/: MarblesConfig.cmake.in  MarblesVersion.H.in  marbles-utils.cmake  set_amrex_options.cmake  set_compile_flags.cmake
Docs/: CMakeLists.txt
Docs/sphinx/: Building.rst  Equations.rst  InputFiles.rst  Introduction.rst  LBM.rst  Testing.rst  VandV.rst  conf.py  index.rst
Source/: BC.H  CMakeLists.txt  Constants.H  EB.H  EB.cpp  Factory.H  FillPatchOps.H  Geometry.H  Geometry.cpp  IC.H  IC.cpp  LBM.H  LBM.cpp  Make.package  Stencil.H  Stencil.cpp  Stencil_D3Q27.H  Utilities.H  Utilities.cpp  VelocityBC.H  VelocityBC.cpp  main.cpp
Tests/: CMakeLists.txt
Tests/test_files/channel_cylinder/: channel_cylinder.inp
Tests/test_files/channel_cylinder_amr/: channel_cylinder_amr.inp
Tests/test_files/channel_cylinder_amr_2d/: channel_cylinder_amr_2d.inp
Tests/test_files/channel_regular/: channel_regular.inp
Tests/test_files/cylinder_turek_2d2/: cylinder_turek_2d2.inp
Tests/test_files/pine_box/: pine_box.inp  pine_box.stl
Tests/test_files/single_cylinder/: single_cylinder.inp
Tests/test_files/single_cylinder_2d/: single_cylinder_2d.inp
Tests/test_files/single_rotated_box/: single_rotated_box.inp
Tests/test_files/sod/: sod.inp
Tests/test_files/sodTest/: profiles.csv  sod.inp  sodTest.ipynb
Tests/test_files/sod_amr/: sod_amr.inp
Tests/test_files/sod_test/: sod.inp
Tests/test_files/tg/: tg.inp
Tests/test_files/thermalDiffusivityTest/: thermalDiffusivityAir.inp  thermalDiffusivityAmmonia.inp
Tests/test_files/thermaldiffusivity_test/: thermal_diffusivity_air.inp  thermal_diffusivity_ammonia.inp
Tests/test_files/viscosityTest/: viscosityTest.inp  viscosityTester.ipynb
Tests/test_files/viscosity_test/: viscosity_test.inp
Tools/sod_test/: sod_test.ipynb
Tools/thermaldiffusivity_test/: thermaldiffusivity_tester.ipynb
Tools/viscosity_test/: viscosity_tester.ipynb
_sources/: Building.rst.txt  GettingStarted.rst.txt  InputFiles.rst.txt  Introduction.rst.txt  LBM.rst.txt  Linting.rst.txt  Testing.rst.txt  Tutorials.rst.txt  VandV.rst.txt
ltBoltz/: .gitignore  README.md
ltBoltz/Docs/: CMakeLists.txt
ltBoltz/Docs/sphinx/: Algorithms.rst  GettingStarted.rst  InputFiles.rst  Introduction.rst  Tutorials.rst  VandV.rst  conf.py  index.rst
ltBoltz/Source/: BC.H  Constants.H  EB.H  EB.cpp  FillPatchOps.H  Geometry.H  IC.H  IC.cpp  IO.H  IO.cpp  LBM.H  LBM.cpp  Make.package  Stencil.cpp  Utilities.H  Utilities.cpp  VelocityBC.H  constants.H  lbm_specs.H  main.cpp
ltBoltz/Tests/test_files/channel_cylinder/: channel_cylinder.inp
ltBoltz/Tests/test_files/channel_regular/: channel_regular.inp
ltBoltz/test/case1/: inputs
ltBoltz/test/case2/: inputs
paper/: paper.bib  paper.md
